infra/kind/manifests/keycloak-realm.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: realestate-trust
  labels:
    app.kubernetes.io/name: keycloakx
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app.kubernetes.io/name: keycloakx
