infra/kind/manifests/observability-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: observability-gateway
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - realestate-trust/api-gateway
  http:
    - match:
        - uri:
            prefix: /kiali
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
    - match:
        - uri:
            prefix: /grafana
      route:
        - destination:
            host: grafana.istio-system.svc.cluster.local
            port:
              number: 3000
    - match:
        - uri:
            prefix: /jaeger
      route:
        - destination:
            host: tracing.istio-system.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: /prometheus
      route:
        - destination:
            host: prometheus.istio-system.svc.cluster.local
            port:
              number: 9090
